# Cowrywise-UUID-API

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  conftest.py  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  sample.env  setup.cfg
cowrywise_uuid_api/: asgi.py  settings.py  urls.py  wsgi.py
cowrywise_uuid_api/utils/uuid_app/: helpers.py
cowrywise_uuid_api/uuid_app/: apps.py  models.py  serializer.py  urls.py  views.py
cowrywise_uuid_api/uuid_app/migrations/: 0001_initial.py
cowrywise_uuid_api/uuid_app/tests/: test_views.py
